--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,17 @@ h1{
 header{
     background-image: url("../assets_day1/img/wall.png");
 }
+
+
+/* main */
+
+main{
+    background-image: url("../assets_day1/img/cork.png");
+    padding: 0 15vw 0;
+}
+
+.square{
+    background-color: white;
+    width: 100%;
+    height: 200px;
+}
