--- a/css/style.css
+++ b/css/style.css
@@ -23,5 +23,15 @@ main{
 .square{
     background-color: white;
     width: 100%;
-    height: 200px;
+    text-align: center;
+    padding: 15px 0 20px;
+    height: 400px;
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.175);
+}
+
+p{
+    font-family:'Sometype Mono', monospace;
+    padding: 15px 15px 0;
+    text-align: left;
+    
 }
