--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ main{
     width: 100%;
     text-align: center;
     padding: 15px 0 20px;
-    height: 400px;
     box-shadow: 3px 3px rgba(0, 0, 0, 0.175);
 }
 
@@ -49,4 +48,19 @@ h4{
 
 .img{
     width: 90%;
+}
+
+
+@media (max-width: 768px) {
+    h1{
+        font-size: 50px;
+    }
+
+}
+
+@media (max-width: 576px) {
+    h1{
+        font-size: 40px;
+    }
+   
 }
