--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h4{
 }
 
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     h1{
         font-size: 50px;
     }
@@ -63,4 +63,4 @@ h4{
         font-size: 40px;
     }
    
-}
+} */
