--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ main{
     text-align: center;
     padding: 15px 0 20px;
     box-shadow: 3px 3px rgba(0, 0, 0, 0.175);
+    position: relative;
 }
 
 p{
@@ -48,6 +49,13 @@ h4{
 
 .img{
     width: 90%;
+}
+
+.point{
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 
