--- a/css/style.css
+++ b/css/style.css
@@ -59,16 +59,16 @@ h4{
 }
 
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     h1{
-        font-size: 50px;
+        font-size: 70px;
     }
 
 }
 
 @media (max-width: 576px) {
     h1{
-        font-size: 40px;
+        font-size: 60px;
     }
    
-} */
+}
