--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ h4{
     left: 50%;
     transform: translate(-50%);
     top: 100px ;
+    z-index: 1;
 }
 
 .img-overlay{
@@ -84,6 +85,15 @@ h4{
 }
 
 
+
+.opacity-all{
+    background-color: rgba(0, 0, 0, 0.49);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+}
 
 
 
